# DecksGenerator

./: .gitignore  .gitmodules  README.md  pyproject.toml
conf/: config.yaml
conf/dataset/data/: german_a2_b1.yaml
conf/dataset/result/: de_a2.yaml  de_a2_test.yaml  en_b1.yaml
conf/deck/: de_a2.yaml  de_a2_test.yaml
conf/prompt/: english.yaml
deck_utils/: config_helpers.py  read.py
notebooks/: collect_german_wordlists.ipynb  data_manipulations.ipynb
src/: README.md  create_deck.py  gen_audio.py  generate.py  parse_result.py  save_audio_to_anki.py
src/src_utils/: flash_cards.py
